<resources>
    <string name="app_name">PayEarn</string>
    <string name="txtCredits">www.google.com</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="title_activity_main10">Main10Activity</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Notes</string>
    <string name="menu_slideshow">Edit profile</string>
    <string name="menu_share">Share</string>
    <string name="menu_about">About</string>
    <string name="menu_disclaimer">privacy policy</string>
    <string name="menu_Rate">Rate</string>
    <string name="menu_Exit">Logout</string>
    <string name="menu_attach">Earn</string>

    <string name="home_second">Home Second</string>
    <string name="pixaearn">PixaEarn</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
