<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_create_black_24dp"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/file"
            android:icon="@drawable/earned"
            android:title="@string/menu_attach" />
    </group>
    <item android:title="Communication">
        <menu>
            <item
                android:id="@+id/Rate"
                android:icon="@drawable/ic_rate_review_black_24dp"
                android:title="Rate">

            </item>
            <item
                android:id="@+id/share"
                android:icon="@drawable/ic_share_black_24dp"
                android:title="share">

            </item>

            <item
                android:id="@+id/About"
                android:icon="@drawable/ic_mood_black_24dp"
                android:title="About">

            </item>
            <item
                android:id="@+id/Disclaimer"
                android:icon="@drawable/ic_do_not_disturb_alt_black_24dp"
                android:title="privacy policy">

            </item>
            <item
                android:id="@+id/Exit"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="Logout">
            </item>
        </menu>
    </item>

</menu>
